--- a/src/app/hub/components/association-register/association-register.component.html
+++ b/src/app/hub/components/association-register/association-register.component.html
@@ -201,21 +201,22 @@
         <p class="txt-center"><mat-icon>touch_app</mat-icon></p>
       </div>
 
-      <mat-card class="set-12 list-Categories" *ngIf="!viewSubLayouts">
+      <div class="dialog-1" *ngIf="!viewSubLayouts">
+        <div class="left-point"></div>
+        <div class="categories">
         <mat-checkbox
-        class="set-12 categories"
+        class="set-12"
           *ngFor="let layout of layouts"
           [value]="layout"
           (change)="updateSelection(layout, $event)"
-          [labelPosition]="labelPosition"
-         
+          [labelPosition]="labelPosition" 
         >
           <span class="checkbox-label">{{ layout.category.name }}</span>
         </mat-checkbox>
-
-      </mat-card>
+      </div>
+      </div>
     
-      <div class="set-12 ctrls">
+      <div class="set-12 ctrls btn-categories">
         <button mat-raised-button color="warn" matStepperPrevious>
           <small>Atras</small>
         </button>
