--- a/src/app/hub/components/association-register/association-register.component.scss
+++ b/src/app/hub/components/association-register/association-register.component.scss
@@ -126,15 +126,43 @@
     }
   }
 
- .mat-card{
-  background-color: #1e7e7f;
+ 
+ .dialog-1{
+  height: auto;
+  width: 70%;
   color:  white;
-  box-shadow: none;
-  border: none;
-  .mat-checkbox{
+  background-color: #1e7e7f;
+  position: absolute;
+  top: 200px;
+  left: 60px;
+  border-radius: 5%;
+  padding: 30px;
+  .categories{
+   display: block;
+   .mat-checkbox{
     margin-top: 15px;
+   }
+   .mat-checkbox:first-child{
+    margin-top: 0;
+   }
   }
- }
+}
+.btn-categories{
+  position: absolute;
+  top: 500px;
+  right: 20px;
+}
+.left-point{
+width: 0;
+height: 0;
+border-left: 2vh solid transparent;
+border-right: 2vh solid transparent;
+border-top: 10vh solid #1e7e7f;
+position: absolute;
+top: 45%;
+left: -10%;
+transform: rotate(60deg);
+}
 
   .listhldr {
     margin-top: 10px;
