add slider button

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
 
         <div class="set-12 slide" [class.active]="activeIndex == 1">
           <p>conoce nuestro <span class="txt70">Documento</span> Punto <span class="txt70">de Partida</span></p>
-          <!-- <button type="button" mat-raised-button color="accent" (click)="popPDF()">click aquí</button> -->
+          <button type="button" mat-raised-button color="accent" (click)="popPDF()">click aquí</button>
         </div>
 
         <div class="set-12 slide" [class.active]="activeIndex == 2">
