add slider documents

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,6 +28,9 @@
         <div class="set-12 slide" [class.active]="activeIndex == 3">
           <p>somos una plataforma <span class="txt70">participativa</span>, <span class="txt70">colaborativa</span>
             que respeta los derechos de todes</p>
+          <button type="button" mat-raised-button color="accent" (click)="popWomenPDF()">haz <strong>click aqui</strong>
+            para ver la
+            intervención de algunas de nuestras poenentes de la presentación</button>
         </div>
       </div>
 
