--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
             que respeta los derechos de todes</p>
           <button type="button" mat-raised-button color="accent" (click)="popWomenPDF()">haz <strong>click aqui</strong>
             para ver la
-            intervención de algunas de nuestras poenentes de la presentación</button>
+            intervención de algunas de nuestras ponentes de la presentación</button>
         </div>
       </div>
 
