fix slider button

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -96,6 +96,10 @@
     font-size: 70pt !important;
   }
 
+  .txt15 {
+    font-size: 15pt !important;
+  }
+
   .loading {
     mat-spinner {
       position: absolute;
