--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,9 +28,11 @@
         <div class="set-12 slide" [class.active]="activeIndex == 3">
           <p>somos una plataforma <span class="txt70">participativa</span>, <span class="txt70">colaborativa</span>
             que respeta los derechos de todes</p>
-          <button type="button" mat-raised-button color="accent" (click)="popWomenPDF()">haz <strong>click aqui</strong>
-            para ver la
-            intervención de algunas de nuestras ponentes de la presentación</button>
+          <p class="txt15">
+            Para ver la intervencion de algunas de nuestras ponentes
+          </p>
+          <button type="button" mat-raised-button color="accent" (click)="popWomenPDF()">haz <strong>click
+              aqui</strong></button>
         </div>
       </div>
 
