--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -29,10 +29,10 @@
           <p>somos una plataforma <span class="txt70">participativa</span>, <span class="txt70">colaborativa</span>
             que respeta los derechos de todes</p>
           <p class="txt15">
-            Para ver la intervencion de algunas de nuestras ponentes
+            Para ver la intervención de algunas de nuestras ponentes
           </p>
           <button type="button" mat-raised-button color="accent" (click)="popWomenPDF()">haz <strong>click
-              aqui</strong></button>
+              aquí</strong></button>
         </div>
       </div>
 
