--- a/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.html
+++ b/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.html
@@ -19,6 +19,10 @@
         <span><strong>{{data.topicTitle}}</strong></span>
         <p><small  [innerHTML]="data.topicDescription"></small></p>
     </div>
+    <!-- <div class="set-12">
+        <p>Relevancia ciudadana</p>
+        <p class="votes">{{ stats.score }} / 100</p>
+      </div> -->
         <div class="set-12 info">
             <button type="button" *ngIf="!userVoted" mat-raised-button color="accent" (click)="openModalVote()">
                 <strong>Votar</strong>
