add solutions tab
add modal register association

--- a/src/app/associations/associations.component.html
+++ b/src/app/associations/associations.component.html
@@ -4,7 +4,7 @@
       >
       <mat-card *ngFor="let association of associations">
         <h4>
-          <strong>{{ association.businessName }}</strong>
+          <strong>{{ association.name }}</strong>
         </h4>
         <p>
           <span><small>{{ association.description }}</small></span>
