--- a/src/app/associations/associations.component.scss
+++ b/src/app/associations/associations.component.scss
@@ -1,10 +1,11 @@
 :host{
     width: 100%;
-    padding: 20px;
+    padding: 0px;
     float: left;
     mat-card {
-        margin-bottom: 10px;
+        margin: 10px;
         box-shadow: none;
+        border-radius: 0px;
       }
       mat-card:last-child{
         margin-bottom: 10px;
