--- a/src/app/associations/single-association/single-association.component.html
+++ b/src/app/associations/single-association/single-association.component.html
@@ -35,26 +35,39 @@
 
       <div class="set-12 cardbody">
         <h3 class="txt-center">{{ association.name }}</h3>
+        <div class="set-12 community">
+          <button class="set-4">
+            <span 
+              ><small><strong>120 miembros</strong></small>
+            </span></button
+          >
+          <button class="set-4"><span 
+            ><small><strong>230 seguidores</strong></small></span
+          ></button>
+        </div>
         <div class="set-12 usrinfo">
           <p class="set-12">
             <small class="set-6"><strong>Semblanza</strong></small>
           </p>
           <p class="set-12">
             <small class="set-12">
-              {{ association.description | slice : 0 : 300 }}
-              <small *ngIf="association.description.length > 300"
+              {{ association.description | slice : 0 : 100 }}
+              <small *ngIf="association.description.length > 100"
                 ><strong>... ver mas</strong></small
               ></small
             >
           </p>
-         
-            <button class="set-12" mat-raised-button color="accent" (click)="openBottomSheet()">
-              <small>¿Qué quieres publicar?</small>
-            </button>
-         
+
+          <button
+            class="set-12"
+            mat-raised-button
+            color="accent"
+            (click)="openBottomSheet()"
+          >
+            <small>¿Qué quieres publicar?</small>
+          </button>
         </div>
       </div>
-      
     </mat-card>
   </div>
 </div>
