add modal members

--- a/src/app/associations/single-association/single-association.component.html
+++ b/src/app/associations/single-association/single-association.component.html
@@ -36,12 +36,12 @@
       <div class="set-12 cardbody">
         <h3 class="txt-center">{{ association.name }}</h3>
         <div class="set-12 community">
-          <button class="set-4">
+          <button class="set-4 txt-left" (click)="openModalMembers()" >
             <span 
               ><small><strong>120 miembros</strong></small>
             </span></button
           >
-          <button class="set-4"><span 
+          <button class="set-4 txt-left" (click)="openModalMembers()"><span 
             ><small><strong>230 seguidores</strong></small></span
           ></button>
         </div>
