--- a/src/app/hub/components/association-register/association-register.component.scss
+++ b/src/app/hub/components/association-register/association-register.component.scss
@@ -2,6 +2,7 @@
   padding: 20px;
   float: left;
   width: 100%;
+  margin-bottom: 60px;
 
   .form-association {
     .fixmob {
@@ -16,15 +17,20 @@
           }
 
           .set-12 {
-            margin-bottom: 10px;
+            margin-bottom: 0px;
           }
           .joinButton {
             display: flex;
             justify-content: flex-end;
             margin-top: 5px;
+           
             button {
               width: 85px;
             }
+            .typeMember{
+              width: 120px;
+            }
+
           }
         }
       }
